--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,3 +1,11 @@
 <h1>Room#show</h1>
-<p><%= "Register Now To Claim Room" unless current_user %></p>
+<!-- <%= link_to "Register Now To Claim Room", new_user_registration_path(room: @room.name) %> -->
+
+<!-- <p><%= "Register Now To Claim Room" unless current_user %></p> -->
+
+<!-- only show this to a registered user -->
+<%= link_to "make temporary", toggle_status_room_path(@room, status: :temporary) %>
+<%= link_to "make unrestricted", toggle_status_room_path(@room, status: :unrestricted) %>
+<%= link_to "make restricted", toggle_status_room_path(@room, status: :restricted) %>
+
 <%= @room.inspect %>
