--- a/app/views/shared/_flash_alerts.html.erb
+++ b/app/views/shared/_flash_alerts.html.erb
@@ -1,3 +1,5 @@
 <% flash.each do |message_type, message| %>
-  <%= message %>
+  <div class="alert alert-dismissible fade show alert-<%= message_type %> m-0 btn-square">
+    <%= message %>
+  </div>
 <% end %>
