integration tests for room actions

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,8 +3,8 @@
 
 <hr>
 
-<%= link_to "make unrestricted", toggle_status_room_path(@room, status: :unrestricted) %>
-<%= link_to "make restricted", toggle_status_room_path(@room, status: :restricted) %>
+<%= link_to "make unrestricted", toggle_status_room_path(status: :unrestricted) %>
+<%= link_to "make restricted", toggle_status_room_path(status: :restricted) %>
 
 <hr>
 
