ability for users to create a room from room#new

--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,9 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>new room</h1>
 
-<!-- TODO: create a partial for this -->
 <%= form_for @room do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
   <%= f.submit 'Create Room' %>
 <% end %>
