--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,10 @@
 <h1>Rooms#index</h1>
 
+<%= link_to "create a room", new_room_path %>
+
+<hr>
+
 <% @rooms.each do |room| %>
   <%= link_to room.name, room %><br>
 <% end %>
+
