basic webrtc functionality

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -3,8 +3,14 @@
 <%= link_to "create a room", new_room_path %>
 
 <hr>
-
+<h1>my rooms</h1>
 <% @rooms.each do |room| %>
+  <%= link_to room.name, room %><br>
+<% end %>
+
+<hr>
+<h1>all rooms</h1>
+<% @all_rooms.each do |room| %>
   <%= link_to room.name, room %><br>
 <% end %>
 
