--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -14,12 +14,39 @@
 
 <%= @room.inspect %>
 
-<hr>
-<button onclick="handleJoinSession();">Join Session</button>
-<hr>
+<span id="room-name" data-room='<%= @room.slug %>'></span>
 
-<span id="room-name" data-room='<%= @room.slug %>'>
+<h1>Action Cable Signaling Server</h1>
+
+<span id="xirsys-creds" data-xirsys='<%= @json_response.html_safe %>'>
 </span>
+
+
+<div>User's ID
+  <span id="currentUser" class="badge badge-primary"><%= @user_id %></span>
+</div>
+
+<div id="remoteViewContainer"></div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div id="localViewContainer">
+      <video id="selfView" autoplay></video>
+    </div>
+  </div>
+</div>
+
+<div id="join-btn-container">
+  <button onclick="handleJoinSession()" class="btn btn-success">
+    Join Room
+  </button>
+</div>
+
+<div id="leave-btn-container">
+  <button onclick="handleLeaveSession()" class="btn btn-danger">
+    Leave Room
+  </button>
+</div>
 
 <% content_for :page_js do %>
   <script type="text/javascript">
