--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -22,8 +22,8 @@
 </span>
 
 
-<div>User's ID
-  <span id="currentUser" class="badge badge-primary"><%= @user.id unless @user.nil? %></span>
+<div>User's Email
+  <span id="currentUser" class="badge badge-primary"><%= @user.email %></span>
 </div>
 
 <div id="remoteViewContainer"></div>
