--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @room.name %></h1>asdfas
+<h1><%= @room.name %></h1>
 <%= link_to "Register Now To Claim Room", new_user_registration_path(room: @room.name) %>
 
 <hr>
