hashed passwords working, needs testing

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -12,6 +12,10 @@
 
 <hr>
 
+<%= link_to "add password", edit_room_path %>
+
+<hr>
+
 <%= @room.inspect %>
 
 <span id="room-name" data-room='<%= @room.slug %>'></span>
