--- a/app/views/rooms/authenticate.html.erb
+++ b/app/views/rooms/authenticate.html.erb
@@ -3,6 +3,6 @@
 <hr>
 
 <%= form_tag authenticate_room_path do %>
-  <%= text_field_tag :thingy %>
+  <%= password_field_tag :password %>
   <%= submit_tag 'Submit' %>
 <% end %>
