--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,2 +1,31 @@
-<%= link_to "Home", root_path %>
-<%= login_helper 'TODO' %>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="<%= root_url %>">
+    <%= image_tag("logo.svg",size: "30", alt: "WebRTC on Rails", class: "d-inline-block align-top") %>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item pl-2 pr-2">
+        <%= link_to "Home", root_path, class: "nav-link" %>
+      </li>
+
+      <% if current_user.is_a? GuestUser %>
+        <li class="nav-item pl-2 pr-2">
+          <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item pl-2 pr-2">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li class="nav-item pl-2 pr-2">
+          <%= link_to "My Account", edit_user_registration_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item pl-2 pr-2">
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</nav>
