--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,33 +1,38 @@
 <div class="container h-75 w-100">
-
   <div class="row h-100 justify-content-center align-items-center">
-      <div class="col-md-8">
-        <div class="card mt-3 mb-3 p-3">
+      <div class="col-md-8 text-center">
+        <%= image_tag("logo.svg",size: "50", alt: "WebRTC on Rails", class: "img-fluid m-2") %>
+        <h1>WebRTC on Rails</h1>
+        <div class="card mt-3 mb-3 p-5">
           <div class="card-block">
-
             <div id="createRoomForm">
-              <!-- TODO: create a partial for this -->
-              <%= form_for @room do |f| %>
-                <%= f.label :create_a_room %>
-                <%= f.text_field :name %>
-                <%= f.submit 'Create New Room' %>
-              <% end %>
+              <%= render "form", room: @room %>
 
-              <button onclick="toggleForm()">Already know where you're going?</button>
+              <button class="mt-3 btn btn-link btn-block" onclick="toggleForm()">
+                Already know where you're going?
+              </button>
             </div>
 
             <div id="goToRoomForm">
-              <input id="roomName" type="text">
-              <button onclick="joinRoom()">Join Room</button>
-              <button onclick="toggleForm()">Need to Create a Room?</button>
+              <div class="form-group">
+                <h2 class="text-secondary">Enter a Room Name</h2>
+                <input id="roomName" type="text" class="form-control bg-light" required="true">
+              </div>
+
+              <div class="form-group">
+                <button onclick="joinRoom()" class="btn btn-salmon btn-block">
+                  Join Room
+                </button>
+              </div>
+
+              <button class="mt-3 btn btn-link btn-block" onclick="toggleForm()">
+                Need to Create a Room?
+              </button>
             </div>
-
-
           </div>
         </div>
       </div>
   </div>
-
 </div>
 
 <% content_for :page_js do %>
