--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,17 +13,17 @@
 
       <% if current_user.is_a? GuestUser %>
         <li class="nav-item pl-2 pr-2">
-          <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
+          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
         </li>
         <li class="nav-item pl-2 pr-2">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Log In", new_user_session_path, class: "nav-link" %>
         </li>
       <% else %>
         <li class="nav-item pl-2 pr-2">
           <%= link_to "My Account", edit_user_registration_path, class: "nav-link" %>
         </li>
         <li class="nav-item pl-2 pr-2">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
