--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,8 +7,11 @@ $font-family-base: 'Work Sans', sans-serif;
 // Colors
 $brand-primary: #fa4932;
 
-
 // Links
 $link-color:            $brand-primary !default;
 $link-hover-color:      darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
+
+// Alerts
+$state-success-text: #ffffff;
+$state-success-bg:   #fa4932;
