--- a/app/views/shared/_flash_alerts.html.erb
+++ b/app/views/shared/_flash_alerts.html.erb
@@ -1,5 +1,10 @@
-<% flash.each do |message_type, message| %>
-  <div class="alert alert-dismissible fade show alert-<%= message_type %> m-0 btn-square">
-    <%= message %>
-  </div>
-<% end %>
+<div class="container p-3">
+  <% flash.each do |message_type, message| %>
+    <div class="alert alert-dismissible fade show alert-<%= message_type %> m-0 btn-square">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <%= message %>
+    </div>
+  <% end %>
+</div>
