more devise styling tweaks

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container h-75 w-100">
   <div class="row h-100 justify-content-center align-items-center">
-      <div class="col-md-8 text-center">
+      <div class="col-lg-6 text-center">
         <%= image_tag("logo.svg",size: "50", alt: "WebRTC on Rails", class: "img-fluid m-2") %>
         <h1>WebRTC on Rails</h1>
         <div class="card mt-3 mb-3 p-5">
