edits to flash alerts to make tests pass

--- a/app/views/shared/_flash_alerts.html.erb
+++ b/app/views/shared/_flash_alerts.html.erb
@@ -4,7 +4,9 @@
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <%= message %>
+      <div id="flash-message">
+        <%= message %>
+      </div>
     </div>
   <% end %>
 </div>
