--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -5,6 +5,7 @@
         <div class="card mt-3 mb-3 p-5">
           <div class="card-block">
             <!-- TODO: Refactor this into its own form -->
+            <!-- TODO: Give users the ability to join a room here too -->
             <%= form_for @room do |f| %>
               <div class="form-group">
                 <h2 class="text-secondary">Room Name</h2>
