--- a/app/views/rooms/authenticate.html.erb
+++ b/app/views/rooms/authenticate.html.erb
@@ -1,8 +1,26 @@
-<h1>enter password to enter room</h1>
+<div class="container h-75 w-100">
+  <div class="row h-100 justify-content-center align-items-center">
+      <div class="col-lg-6 text-center">
+        <h1>Enter Room Password</h1>
+        <div class="card mt-3 mb-3 p-5">
+          <div class="card-block">
+            <!-- TODO: Refactor this into its own form -->
+            <!-- TODO: Give users the ability to join a room here too -->
+            <%= form_tag authenticate_room_path do %>
+              <div class="form-group">
+                <h2 class="text-secondary">Password</h2>
+                <%= password_field_tag :password, nil, class: "form-control" %>
+              </div>
 
-<hr>
+              <div class="form-group">
+                <%= submit_tag "Enter Room", class: "btn btn-salmon btn-block" %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
 
-<%= form_tag authenticate_room_path do %>
-  <%= password_field_tag :password %>
-  <%= submit_tag 'Submit' %>
-<% end %>
+
+
