example component making http request with axios

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= react_component("Pong", props: @hello_world_props, prerender: false) %>
+
 <div class="container h-75 w-100">
   <div class="row h-100 justify-content-center align-items-center">
       <div class="col-lg-6 text-center">
