--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -4,25 +4,7 @@
         <h1>Create a Room</h1>
         <div class="card mt-3 mb-3 p-5">
           <div class="card-block">
-            <!-- TODO: Refactor this into its own form -->
-            <!-- TODO: Give users the ability to join a room here too -->
-            <%= form_for @room do |f| %>
-              <div class="form-group">
-                <h2 class="text-secondary">Room Name</h2>
-                <%= f.text_field :name, class: "form-control", required: true %>
-              </div>
-
-              <div class="form-group">
-                <h2 class="text-secondary">Room Password <small><em>optional</em></small></h2>
-                <%= f.text_field :password, class: "form-control" %>
-              </div>
-
-              <%= f.hidden_field :user_id, value: current_user.id %>
-
-              <div class="form-group">
-                <%= f.submit 'Create a New Room', class: "btn btn-salmon btn-block" %>
-              </div>
-            <% end %>
+            <%= render 'form' %>
           </div>
         </div>
       </div>
